# metamorphosis

./: CMakeLists.txt  Doxyfile  README.md
docs/: index.md
src/main/: CMakeLists.txt  main.cpp
src/metamorphosis/: CMakeLists.txt  exception.hpp  forward_declarations.hpp  get_c_str_hash.hpp  image_utils.cpp  image_utils.hpp  name_component.hpp  number_name_component.hpp  program.cpp  program.hpp  program_args.hpp  sort_policies.hpp  sort_strategies.cpp  sort_strategies.hpp  string_name_component.hpp  target_file.cpp  target_file.hpp  target_image.hpp
tests/: CMakeLists.txt
tests/metamorphosis_gtest/: CMakeLists.txt  main.cpp  program_test.cpp
